# renode-bazel-rules

./: .ci.yml  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: bazel_test.yml
dependency_support/: BUILD  initialize_external.bzl  load_external.bzl  pip_requirements_lock.txt
dependency_support/nuget_packages/: nuget.bzl
dependency_support/renode-resources/: BUILD  resources.bzl
examples/: WORKSPACE
examples/cortex-r52/: BUILD  BUILD.bazel  MODULE.bazel  test.robot  test_example.sh
examples/failing-test/: BUILD.bazel  MODULE.bazel  test.robot  test_example.sh
examples/local-renode/: BUILD.bazel  MODULE.bazel  test.robot  test_example.sh
examples/nxp/: BUILD  NXP-K64F.robot  nxp_k64f--zephyr_basic_uart.elf  robot.bzl
examples/nxp-k64f/: BUILD  MODULE.bazel  NXP-K64F.robot
examples/renode-interactive/: BUILD.bazel  MODULE.bazel  additional_file.resc  test.repl  test.resc
examples/verilator-cosimulation/: BUILD.bazel  MODULE.bazel  WORKSPACE  platform_linux.repl  platform_linux.resc  test_linux.robot
examples/verilator-cosimulation/dpi-verilator-cosimulation/: BUILD.bazel  DMATop.v  sim-main-dpi.cpp  sim.sv
renode/: BUILD  BUILD.bazel  defs.bzl  deps.bzl  extensions.bzl  renode.BUILD.bazel  renode.bzl  renode_requirements_lock.txt  repo.bzl  toolchain.bzl
renode/private/: BUILD.dist.bazel.tpl
renode_sources/: BUILD  load_renode.bzl  renode.patch
toolchain_renode/: AntShell-Add-BUILD.bazel.patch  BUILD  BUILD.renode_sources  BigGustave-Add-BUILD.bazel.patch  CxxDemangler-Add-BUILD.bazel.patch  ELFSharp-Add-BUILD.bazel.patch  FdtSharp-Add-BUILD.bazel.patch  Infrastructure-Add-BUILD.bazel.patch  Migrant-Add-BUILD.bazel.patch  PacketDotNet-Add-BUILD.bazel.patch  Renode-Add-BUILD.bazel.patch  Xwt-Add-BUILD.bazel.patch  copy.bzl  crypto-Add-BUILD.bazel.patch  defs.bzl  libtftp-Add-BUILD.bazel.patch  migrant.BUILD  options-parser-Add-BUILD.bazel.patch  renode-resources.BUILD  renode.BUILD  renode.WORKSPACE  renode.bzl  termsharp-Add-BUILD.bazel.patch  toolchain.bzl
toolchain_renode/AntShell/: BUILD  Set-AssemblyVersion.patch  antshell.BUILD  defs.bzl
toolchain_renode/BigGustave/: BUILD  biggustave.BUILD  defs.bzl
toolchain_renode/CxxDemangler/: BUILD  Set-AssemblyVersion.patch  cxxdemangler.BUILD  defs.bzl
toolchain_renode/ELFSharp/: BUILD  defs.bzl  elfsharp.BUILD
toolchain_renode/FdtSharp/: BUILD  defs.bzl  fdtsharp.BUILD
toolchain_renode/Infrastructure/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/Arm/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/Arm-M/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/Arm64/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/PowerPC/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/RiscV/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/Sparc/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/X86/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/Xtensa/: BUILD
toolchain_renode/Infrastructure/Emulator/Cores/tlib/tcg/: BUILD  generic_tcg.bzl
toolchain_renode/Infrastructure/Emulator/Extensions/: BUILD
toolchain_renode/Infrastructure/Emulator/Main/: BUILD
toolchain_renode/Infrastructure/Emulator/Peripherals/: BUILD
toolchain_renode/Infrastructure/Plugins/AdvancedLoggerViewerPlugin/: BUILD
toolchain_renode/Infrastructure/Plugins/SampleCommandPlugin/: BUILD
toolchain_renode/Infrastructure/Plugins/TracePlugin/: BUILD
toolchain_renode/Infrastructure/UI/: BUILD
toolchain_renode/InpliTftpServer/: BUILD  defs.bzl  libtftp.BUILD
toolchain_renode/Migrant/: BUILD  defs.bzl
toolchain_renode/PacketDotNet/: BUILD  defs.bzl  packetdotnet.BUILD
toolchain_renode/Xwt/: BUILD  defs.bzl  xwt.BUILD
toolchain_renode/bc-csharp/: BUILD  crypto.BUILD  defs.bzl
toolchain_renode/options-parser/: BUILD  defs.bzl  optionsparser.BUILD
toolchain_renode/renode-infrastructure/: defs.bzl  infrastructure.BUILD
toolchain_renode/resources/: BUILD  BUILD.bazel  resources.bzl
toolchain_renode/termsharp/: BUILD  defs.bzl  termsharp.BUILD
toolchain_renode/tlib/: defs.bzl  tlib.BUILD
