load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "renode_test_python_requirements",
    src = "@renode_default_toolchain//:python_requirements",
    data = [
        "@renode_default_toolchain//:python_requirements_dependencies",
    ],
    extra_args = [
        "--strip-extras",
        "--no-annotate",
    ],
    requirements_txt = "renode_requirements_lock.txt",
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)
