load("@rules_renode//renode:toolchain.bzl", "renode_toolchain")

package(default_visibility = ["//visibility:public"])

_RENODE_DIRECTORY = "renode_*/"
_COSIMULATION_DIRECTORY = _RENODE_DIRECTORY + "**/plugins/**/IntegrationLibrary/"

filegroup(
    name = "runtime",
    srcs = glob([_RENODE_DIRECTORY + "*"]),
)
renode_toolchain(
    name = "toolchain_impl",
    runtime = [":runtime"],
)

filegroup(
    name = "python_requirements",
    srcs = glob([_RENODE_DIRECTORY + "tests/requirements.txt"]),
)
filegroup(
    name = "python_requirements_dependencies",
    srcs = glob([_RENODE_DIRECTORY + "tools/**/requirements.txt"]),
)

filegroup(
    name = "renode_dpi_cc_library_srcs",
    srcs =
        glob([
            _COSIMULATION_DIRECTORY + p
            for p in [
                "libs/socket-cpp/**/*.cpp",
                "src/communication/socket_channel.cpp",
                "src/renode_dpi.cpp",
                "libs/socket-cpp/**/*.h",
                "src/communication/*.h",
                "src/*.h",
            ]
        ]),
)
filegroup(
    name = "renode_dpi_cc_library_hdrs",
    srcs =
        glob([
            _COSIMULATION_DIRECTORY + p
            for p in [
                "src/renode_dpi.h",
                "hdl/includes/*",
            ]
        ]),
)

# There are no Verilog rules that supports bzlmod.
# These filegroups below can be used to create a relevant target in your project.
filegroup(
    name = "renode_dpi_verilog_library_srcs",
    srcs = glob([_COSIMULATION_DIRECTORY + "hdl/renode_pkg.sv"]) +
           glob([_COSIMULATION_DIRECTORY + "hdl/imports/*.sv"]) +
           glob([_COSIMULATION_DIRECTORY + "hdl/modules/**/*.sv"]),
)
filegroup(
    name = "renode_dpi_verilog_library_hdrs",
    srcs = glob([_COSIMULATION_DIRECTORY + "hdl/includes/*.svh"]),
)
