module(
    name = "renode_bazel_examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_renode", version = "0.0.0")
local_path_override(
    module_name = "rules_renode",
    path = "../..",
)

renode = use_extension("@rules_renode//renode:extensions.bzl", "renode")
use_repo(renode, "renode_toolchains")

register_toolchains("@renode_toolchains//:all")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "nxp_k64f--zephyr_basic_uart.elf",
    sha256 = "db432c3efa414a365dc55cdbffb29ed827914d7ef2d7a605cad981a2b349042d",
    url = "https://dl.antmicro.com/projects/renode/nxp_k64f--zephyr_basic_uart.elf-s_618844-2d588c6899efaae76a7a27136fd8cff667bbcb6f",
)
